--- a/repository/EdurekaSelenium/pom.xml
+++ b/repository/EdurekaSelenium/pom.xml
@@ -14,6 +14,30 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+<profiles>
+<profile>
+      <id>Smoke</id>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>2.20.1</version>
+               <configuration>
+              <suiteXmlFiles>
+                <suiteXmlFile>testng.xml</suiteXmlFile>
+              </suiteXmlFiles>
+            </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+</profiles>
+
+
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
